ipad layout bug fixed

--- a/public/styles/_responsive.scss
+++ b/public/styles/_responsive.scss
@@ -40,6 +40,7 @@
         flex-wrap: wrap;
         .sign-up {
             max-width: 100%;
+            margin-bottom: 0;
         }
         .hero-img {
             width: 100%;
