--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -10,6 +10,7 @@
     width: 100%;
     padding: 0 4em; // padding width of all elements
     background: $color-bg;
+    overflow: hidden;
 } .container { 
     padding: 6em 0; // padding top/bottom of all
     max-width: 1150px;
@@ -95,7 +96,7 @@
         margin-left: 3em;
     } 
     .sign-up {
-        margin-top: 3.5em;
+        margin: 3.5em 0;
         width: 450px;
     }
 }
